--- a/mockup/index.html
+++ b/mockup/index.html
@@ -40,12 +40,12 @@
       </div>
     </div>
 
-<div style="padding-top: 60px">
-<div class="container">
-<h1>okayama-js</h1>
+    <div class="container">
 
-</div>
-</div>
+      <h1>okajs Bootstrap starter template</h1>
+      <p>Use this document as a way to quick start any new project.<br> All you get is this message and a barebones HTML document.</p>
+
+    </div> <!-- /container -->
 
 
 
