--- a/mockup/index.html
+++ b/mockup/index.html
@@ -25,7 +25,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="brand" href="./index.html">okayama-js</a>
+          <a class="brand" href="./index.html">pos:a</a>
           <div class="nav-collapse collapse">
             <ul class="nav">
               <li class="active">
@@ -52,7 +52,7 @@
     <!-- Footer
     ================================================== -->
     <footer class="footer">
-      <address>okayama-js</address>
+      <address>posa.skpn.com</address>
     </footer>
 
 
