--- a/mockup/base-css.html
+++ b/mockup/base-css.html
@@ -25,7 +25,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="brand" href="./index.html">okayama-js</a>
+          <a class="brand" href="./index.html">pos:a</a>
           <div class="nav-collapse collapse">
             <ul class="nav">
               <li class="">
@@ -2124,7 +2124,7 @@ For example, &lt;code&gt;&amp;lt;section&amp;gt;&lt;/code&gt; should be wrapped 
     <!-- Footer
     ================================================== -->
     <footer class="footer">
-      <address>okayama-js</address>
+      <address>posa.skpn.com</address>
     </footer>
 
 
